--- a/verzamelaarsplatform/composer.json
+++ b/verzamelaarsplatform/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.5",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^5.11"
+        "spatie/laravel-permission": "^5.11",
+        "spatie/laravel-searchable": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
