--- a/verzamelaarsplatform/composer.json
+++ b/verzamelaarsplatform/composer.json
@@ -13,7 +13,7 @@
         "laravel/scout": "^10.5",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.11",
-        "spatie/laravel-searchable": "*"
+        "spatie/laravel-searchable": "^1.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
